# ragauge

./: .gitignore  CLAUDE.md  DESIGN.md  PRD.md  README.md  dashboard.md  pyproject.toml
.github/workflows/: eval-gate.yml
data/: manifest.json
data/golden/: README.md  candidates.jsonl
evals/: baseline.json  golden_verification.json
ragauge/: __init__.py  cli.py  config.py  contracts.py
ragauge/eval/: __init__.py  ablation.py  cost.py  gate.py  golden.py  judge.py  metrics.py  run.py  sweep.py  verify.py
ragauge/generate/: __init__.py  generator.py
ragauge/ingest/: __init__.py  acquire.py  chunker.py  normalize.py  parse.py  pipeline.py  sections.py  store.py
ragauge/retrieve/: __init__.py  bm25.py  embedder.py  fusion.py  index.py  rerank.py  retriever.py
tests/: test_chunker.py  test_contracts.py  test_eval_metrics.py  test_gate.py  test_hybrid_retrieve.py  test_index_retrieve.py  test_normalize.py  test_sections.py  test_sweep_cost.py  test_verify.py
