[project]
name = "ragauge"
version = "0.1.0"
description = "Eval-first retrieval-augmented QA over SEC 10-K filings — Slice 1: ingest + dense retrieval."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.6",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    # torch is declared explicitly (not just transitively via
    # sentence-transformers) so the CPU wheel-index pin in [tool.uv.sources]
    # actually binds — a source on a transitive-only dependency is ignored, which
    # silently resolved the multi-GB CUDA build. See README / NFR3.
    "torch>=2.2",
    # Local embedding backbone (bge-base-en-v1.5), CPU-only on the pinned index.
    "sentence-transformers>=3.0",
    # Generation + LLM-as-judge for the eval harness; uses messages.parse
    # structured output. Lazily imported so the deterministic retrieval metrics
    # run with no SDK and no API key.
    "anthropic>=0.49",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# Pin torch to the CPU wheel index so a fresh `uv sync` is CPU-only and portable
# (NFR3) — no multi-GB CUDA download.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
ragauge = "ragauge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ragauge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Tests that need the real embedding model / network are marked and skipped by default.
markers = [
    "model: requires the local embedding model (downloads weights on first run)",
    "network: requires network access (EDGAR)",
]
addopts = "-q"
